# api/swagger/swagger.yaml
@@ -12,8 +12,8 @@
   paths:
     /offender/{nomsId}/viper:
       parameters:
-        - in: "path"
-          name: "nomsId"
+        - name: "nomsId"
+          in: "path"
           required: true
           type: "string"
           pattern: "[A-Z]\\d{4}[A-Z]{2}"
@@ -32,7 +32,7 @@
                 nomsId: "A1234BC"
                 viperRating: 0.56
             schema:
-              "$ref": "#/definitions/viperRatingSuccess"
+              "$ref": "#/definitions/viperRatingResult"
           500:
             description: "Invalid NOMS Id"
             examples:
@@ -51,8 +51,34 @@
           - "VIPER Rating"
         produces:
           - "application/json"
+      post:
+        x-swagger-router-controller: offender
+        operationId: recordViperRating
+        summary: "Record VIPER Rating"
+        description: "Records a single VIPER Rating into the dataset"
+        parameters:
+          - name: body
+            in: body
+            required: false
+            description: VIPER Rating score to be recorded against the provided NOMS Id
+            schema:
+              "$ref": "#/definitions/viperRatingScore"
+        responses:
+          201:
+            description: "Created"
+          500:
+            description: "Invalid NOMS Id"
+            examples:
+              application/json:
+                message: "Request validation failed: Parameter (nomsId) does not match required pattern: [A-Z]\\d{4}[A-Z]{2}"
+            schema:
+              "$ref": "#/definitions/invalidArgumentError"
+        tags:
+          - "VIPER Rating"
+        consumes:
+          - "application/json"
   definitions:
-    viperRatingSuccess:
+    viperRatingResult:
       type: "object"
       properties:
         nomsId:
@@ -64,8 +90,23 @@
           type: "number"
           description: "A percentile VIPER Rating"
           example: 0.56
+          maximum: 1
+          minimum: 0
+          format: "double"
       required:
         - "nomsId"
+        - "viperRating"
+    viperRatingScore:
+      type: "object"
+      properties:
+        viperRating:
+          type: "number"
+          description: "A percentile VIPER Rating"
+          example: 0.56
+          maximum: 1
+          minimum: 0
+          format: "double"
+      required:
         - "viperRating"
     invalidArgumentError:
       type: "object"
